# Simple-Matrix-Lib

./: CMakeLists.txt  addtest.cpp  bastest.cpp  helper.cpp  helper.hpp  ioftest.cpp  main.cpp  matrix.cpp  matrix.hpp  mattest.cpp  multest.cpp  opstest.cpp  statest.cpp  subtest.cpp  utils.cpp  utils.hpp
.github/workflows/: cmake.yml
