cmake_minimum_required(VERSION 3.5)

project(Simple-Matrix-Lib LANGUAGES CXX)
enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenMP)
include_directories(${OpenMP_INCLUDE_DIR})
link_directories(${OpenMP_LIBRARY_DIR})

add_library(${PROJECT_NAME} matrix.cpp matrix.hpp)
add_executable(test_main main.cpp)
add_executable(test_bas bastest.cpp)
add_executable(test_add addtest.cpp)
add_executable(test_sub subtest.cpp)
add_executable(test_mul multest.cpp)
add_executable(test_sta statest.cpp)
add_executable(test_ops opstest.cpp)
add_executable(test_mat mattest.cpp)

target_link_libraries(${PROJECT_NAME} ${OpenMP_LIBRARIES})
target_link_libraries(test_main ${OpenMP_LIBRARIES})
target_link_libraries(test_bas ${OpenMP_LIBRARIES})
target_link_libraries(test_add ${OpenMP_LIBRARIES})
target_link_libraries(test_sub ${OpenMP_LIBRARIES})
target_link_libraries(test_mul ${OpenMP_LIBRARIES})
target_link_libraries(test_sta ${OpenMP_LIBRARIES})
target_link_libraries(test_ops ${OpenMP_LIBRARIES})
target_link_libraries(test_mat ${OpenMP_LIBRARIES})

add_test(NAME main COMMAND test_main)
add_test(NAME basics COMMAND test_bas)
add_test(NAME addition COMMAND test_add)
add_test(NAME substraction COMMAND test_sub)
add_test(NAME multiplication COMMAND test_mul)
add_test(NAME statistics COMMAND test_sta)
add_test(NAME operations COMMAND test_ops)
add_test(NAME maths COMMAND test_mat)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
